--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,7 @@ body{
     margin: auto;
     padding-top: 6%;
     padding-left: 10%;
+    z-index: 1;
 }
 #carrito{
     position: absolute;
@@ -22,4 +23,5 @@ body{
     margin: auto;
     margin-top: 25%;
     margin-left: 50%;
+    z-index: 2;
     }
