--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,17 +11,57 @@ body{
      height: 750px;
     display: block;
     position: absolute;
-    margin: auto;
-    top: 10%;
-    left: 11%;
+    top: 290px;
+    left: 400px;
     z-index: 1;
 }
 #carrito{
     position: absolute;
     height: 480px;
     display: block;
-    margin: auto;
-    top: 45%;
-    left: 50%;
+    top: 625px;
+    left: 1150px;
     z-index: 3;
     }
+
+.milk{
+   border: violet 2px;
+    position: absolute;
+    width: 150px; 
+     height: 100px;
+     background-color: transparent;
+     z-index: 2;
+     top: 455px;
+     left: 430px;
+}
+#MILK1{
+  position:absolute;
+  left: -10px;
+  z-index: 2;
+  content: icon;
+}
+#MILK2{
+    position:absolute;
+    left: 30px;
+    z-index: 2;
+    content: icon;
+  }
+#MILK3{
+    position:absolute;
+    left: 60px;
+    z-index: 2;
+    content: icon;
+  }
+#MILK4{
+    position:absolute;
+    left: 90px;
+    z-index: 2;
+    content: icon;
+  }
+  #MILK5{
+    position:absolute;
+    left: 120px;
+    z-index: 2;
+    content: icon;
+  }
+
