--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,47 +21,93 @@ body{
     display: block;
     top: 625px;
     left: 1150px;
-    z-index: 3;
+    z-index: 2;
     }
 
 .milk{
-   border: violet 2px;
     position: absolute;
     width: 150px; 
      height: 100px;
      background-color: transparent;
      z-index: 2;
-     top: 455px;
+     top: 435px;
      left: 430px;
 }
 #MILK1{
   position:absolute;
   left: -10px;
-  z-index: 2;
+  z-index: 3;
   content: icon;
 }
 #MILK2{
     position:absolute;
     left: 30px;
-    z-index: 2;
+    z-index: 3;
     content: icon;
   }
 #MILK3{
     position:absolute;
     left: 60px;
-    z-index: 2;
+    z-index: 3;
     content: icon;
   }
 #MILK4{
     position:absolute;
     left: 90px;
-    z-index: 2;
+    z-index: 3;
     content: icon;
   }
   #MILK5{
     position:absolute;
     left: 120px;
-    z-index: 2;
+    z-index: 3;
     content: icon;
   }
+
+.Pasta{
+    position: absolute;
+    width: 160px; 
+     height: 100px;
+     background-color: transparent;
+     z-index: 2;
+     top: 435px;
+     left: 610px;
+}
+#pasta1{
+    position:absolute;
+    left: -20px;
+    z-index: 3;
+    content: icon;
+}
+#pasta2{
+    position:absolute;
+    left: 8px;
+    z-index: 3;
+    content: icon;
+}
+#pasta3{  
+    position:absolute;
+    left: 34px;
+    z-index: 3;
+    content: icon;
+}
+#pasta4{
+    position:absolute;
+    left: 60px;
+    z-index: 3;
+    content: icon;
+}
+#pasta5{
+    position:absolute;
+    left: 86px;
+    z-index: 3;
+    content: icon;
+}
+
+#pasta6{
+    position :absolute;
+    left: 112px;
+    z-index: 3;
+    content: icon;
+}
 
