--- a/CSS/style.css
+++ b/CSS/style.css
@@ -361,3 +361,115 @@ body{
     z-index: 3;
     content: icon;
 }
+
+.Chocolate{
+    position: absolute;
+    width: 170px; 
+     height: 100px;
+     background-color: transparent;
+     z-index: 2;
+     top: 695px;
+     left: 420px ;
+}
+#chocolate1{
+    position:absolute;
+    left: -9px;
+    z-index: 3;
+    content: icon;
+}
+#chocolate2{
+    position:absolute;
+    left: 40px;
+    z-index: 3;
+    content: icon;
+}
+#chocolate3{  
+    position:absolute;
+    left: 75px;
+    z-index: 3;
+    content: icon;
+}
+#chocolate4{
+    position:absolute;
+    left: 115px;
+    z-index: 3;
+    content: icon;
+}
+
+.Pan{
+    position: absolute;
+    width: 230px; 
+     height: 100px;
+     background-color: transparent;
+     z-index: 2;
+     top: 695px;
+     left: 590px ;
+}
+#pan1{
+    position:absolute;
+    left: -9px;
+    height: 80px;
+    z-index: 3;
+    content: icon;
+}
+#pan2{
+    position:absolute;
+    left: 40px;
+    height: 80px;
+    z-index: 3;
+    content: icon;
+}
+#pan3{  
+    position:absolute;
+    left: 100px;
+    height: 80px;
+    z-index: 3;
+    content: icon;
+}
+#pan4{
+    position:absolute;
+    left: 165px;
+    height: 80px;
+    z-index: 3;
+    content: icon;
+}
+
+.ZumoNaranja{
+    position: absolute;
+    width: 210px; 
+     height: 100px;
+     background-color: transparent;
+     z-index: 2;
+     top: 695px;
+     left: 836px ;
+}
+#zumoNaranja1{
+    position:absolute;
+    left: -6px;
+    z-index: 3;
+    content: icon;
+}
+#zumoNaranja2{
+    position:absolute;
+    left: 37px;
+    z-index: 3;
+    content: icon;
+}
+#zumoNaranja3{  
+    position:absolute;
+    left: 74px;
+    z-index: 3;
+    content: icon;
+}
+#zumoNaranja4{
+    position:absolute;
+    left: 115px;
+    z-index: 3;
+    content: icon;
+}
+#zumoNaranja5{
+      position:absolute;
+      left: 155px;
+      z-index: 3;
+      content: icon;
+ }
