--- a/CSS/style.css
+++ b/CSS/style.css
@@ -502,3 +502,88 @@ body{
     z-index: 3;
     content: icon;
 }
+
+#cajaM1{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    z-index: 1;
+    top: 830px;
+    left: 406px ;
+}
+#cajaM2{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    z-index: 1;
+    top: 830px;
+    left: 606px ;
+}
+#cajaM3{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    z-index: 1;
+    top: 830px;
+    left: 809px ;
+}
+#cajaM4{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    z-index: 1;
+    top: 830px;
+    left: 1006px ;
+}
+
+.Tomato{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    top: 800px;
+    left: 406px ;
+}
+#tomato1{
+    position:absolute;
+    top: 40px;
+    width: 40px;
+    left: 12px;
+    z-index: 2;
+    content: icon;
+}
+#tomato2{
+    position:absolute;
+    top: 40px;
+    width: 40px;
+    left: 54px;
+    z-index: 2;
+    content: icon;
+}
+
+#tomato3{
+    position:absolute;
+    top: 40px;
+    width: 40px;
+    left: 90px;
+    z-index: 2;
+    content: icon;
+}
+
+#tomato4{
+    position:absolute;
+    top: 40px;
+    width: 40px;
+    left: 120px;
+    z-index: 2;
+    content: icon;
+}
+
+#tomato5{
+    position:absolute;
+    top: 40px;
+    width: 40px;
+    left: 150px;
+    z-index: 3;
+    content: icon;
+}
+
