--- a/CSS/style.css
+++ b/CSS/style.css
@@ -640,3 +640,107 @@ body{
     z-index: 2;
     content: icon;
 }
+
+
+.Berenjena{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    top: 800px;
+    left: 806px ;
+}
+#berenjena1{
+    position:absolute;
+    top: 10px;
+    left: 12px;
+    z-index: 2;
+    content: icon;
+}
+#berenjena2{
+    position:absolute;
+    top: 10px;
+    left: 36px;
+    z-index: 2;
+    content: icon;
+}
+#berenjena3{
+    position:absolute;
+    top: 10px;
+    left: 62px;
+    z-index: 2;
+    content: icon;
+}
+#berenjena4{
+    position:absolute;
+    top: 10px;
+    left: 92px;
+    z-index: 2;
+    content: icon;
+}
+#berenjena5{
+    position:absolute;
+    top: 10px;
+    left: 122px;
+    z-index: 2;
+    content: icon;
+}
+/* berenjena 6 y 7 no utilizar para JS */
+#berenjena6{
+    position:absolute;
+    top: 40px;
+    left: 52px;
+    z-index: 1;
+    content: icon;
+}
+#berenjena7{
+    position:absolute;
+    top: 40px;
+    left: 100px;
+    z-index: 1;
+    content: icon;
+}
+
+
+.Platano{
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    top: 800px;
+    left: 1006px ;
+}
+#platano1{
+    position:absolute;
+    top: 10px;
+    left: 12px;
+    z-index: 2;
+    content: icon;
+}
+#platano2{
+    position:absolute;
+    top: 10px;
+    left: 76px;
+    z-index: 2;
+    content: icon;
+}
+#platano3{
+    position:absolute;
+    top: 10px;
+    left: 122px;
+    z-index: 2;
+    content: icon;
+}
+
+#platano4{
+    position:absolute;
+    top: 40px;
+    left: 52px;
+    z-index: 1;
+    content: icon;
+}
+#platano5{
+    position:absolute;
+    top: 40px;
+    left: 100px;
+    z-index: 1;
+    content: icon;
+}
