--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,14 @@ body{
     background-size: cover;
     
 }
+#Titulo{
+    position: absolute;
+    top: 220px;
+    right: 120px;
+    font-size: 70px;
+    font-family: "Ink Free", Times, serif;
+    color: rgb(208, 0, 0);
+}
 
 #showcase{
      height: 750px;
