--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/img/background-market.jpg);
+    background-image: url("../img/background-market.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
