--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 body{
+    background-color: transparent;
     background-image: url("../img/background-market.jpg");
     background-attachment: fixed;
     background-position: center;
