--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,11 @@
+
 body{
+    overflow: hidden;
     background-color: transparent;
     background-image: url("../img/background-market.jpg");
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     
 }
 #contenedorCarrito{
