Fixing the tittle

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,7 +30,7 @@ body{
 #Titulo{
     position: absolute;
     top: 220px;
-    right: 120px;
+    right: 8%;
     font-size: 70px;
     font-family: "Ink Free", Times, serif;
     color: rgb(208, 0, 0);
